[gd_scene load_steps=8 format=2]

[ext_resource path="res://battle.gd" type="Script" id=1]
[ext_resource path="res://poke/mach mich uauf.jpg" type="Texture" id=2]
[ext_resource path="res://Sprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://poke/Pikachu gelb.png" type="Texture" id=4]
[ext_resource path="res://poke/blitz.png" type="Texture" id=5]
[ext_resource path="res://poke/endivie gr√ºn.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]

resource_name = "donner"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("spieler/Sprite/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1467.62, 120.751 ), Vector2( 4082.58, 129.879 ), Vector2( 4778.83, 129.879 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spieler/Sprite/Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("spieler/Sprite/Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 90.0, 90.0, 0.0 ]
}

[node name="Kampfszene" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="mach mich uauf" type="Sprite" parent="." index="0"]

position = Vector2( 342.89, 295.978 )
scale = Vector2( 0.660099, 0.515103 )
texture = ExtResource( 2 )

[node name="spieler" type="Node2D" parent="." index="1"]

editor/display_folded = true

[node name="Label2" type="Label" parent="spieler" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 353.0
margin_top = 141.0
margin_right = 476.0
margin_bottom = 155.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "du"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" parent="spieler" index="1" instance=ExtResource( 3 )]

position = Vector2( 109.837, 220.853 )
scale = Vector2( 0.15165, 0.134512 )
texture = ExtResource( 4 )
HP = 500
AP = 100
Strenght = null
Attackcost = 10
Attacktype = "Water"

[node name="Sprite" type="Sprite" parent="spieler/Sprite" index="0"]

visible = false
position = Vector2( 4778.83, 129.879 )
scale = Vector2( 7.39597, -8.19285 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="ProgressBar" type="ProgressBar" parent="spieler" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_top = 287.0
margin_right = 276.0
margin_bottom = 316.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 40.0
exp_edit = false
rounded = false
percent_visible = true
_sections_unfolded = [ "Percent" ]

[node name="at4" type="Button" parent="spieler" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 46.0
margin_top = 386.0
margin_right = 246.0
margin_bottom = 417.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Attacke1"
flat = false
align = 1

[node name="at3" type="Button" parent="spieler" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 47.0
margin_top = 425.0
margin_right = 247.0
margin_bottom = 456.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Attacke2"
flat = false
align = 1

[node name="at2" type="Button" parent="spieler" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 47.0
margin_top = 465.0
margin_right = 247.0
margin_bottom = 496.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Attacke3"
flat = false
align = 1

[node name="at" type="Button" parent="spieler" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 47.0
margin_top = 509.0
margin_right = 247.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Attacke4"
flat = false
align = 1

[node name="Label" type="Label" parent="spieler" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 298.0
margin_right = 25.0
margin_bottom = 312.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "HP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label3" type="Label" parent="spieler" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 188.0
margin_top = 232.0
margin_right = 205.0
margin_bottom = 246.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "AP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label4" type="Label" parent="spieler" index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 217.0
margin_top = 233.0
margin_right = 308.0
margin_bottom = 247.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "AP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label5" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 791.0
margin_top = 192.0
margin_right = 837.0
margin_bottom = 206.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Endivie"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label6" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 74.0
margin_top = 169.0
margin_right = 123.0
margin_bottom = 183.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Pikachu"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="gegner" type="Node2D" parent="." index="4"]

editor/display_folded = true

[node name="Label4" type="Label" parent="gegner" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 989.0
margin_top = 310.0
margin_right = 1008.0
margin_bottom = 324.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "HP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite2" parent="gegner" index="1" instance=ExtResource( 3 )]

position = Vector2( 828.565, 244.043 )
scale = Vector2( 0.580203, 0.584984 )
texture = ExtResource( 6 )
HP = 500
Strenght = null
Attackcost = null
Attacktype = null

[node name="ProgressBar2" type="ProgressBar" parent="gegner" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 747.0
margin_top = 303.0
margin_right = 979.0
margin_bottom = 332.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
percent_visible = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/donner = SubResource( 1 )
blend_times = [  ]

[connection signal="pressed" from="spieler/at4" to="." method="_on_at4_pressed"]

[connection signal="pressed" from="spieler/at3" to="." method="_on_at3_pressed"]

[connection signal="pressed" from="spieler/at2" to="." method="_on_at2_pressed"]

[connection signal="pressed" from="spieler/at" to="." method="_on_at_pressed"]


